src/objects/NTM_Country_Import__c.object
<CustomObject>
    <description>Details for a product that is imported by a country, for use with the New to Market application</description>
    <fields>
        <fullName>Avg_US__c</fullName>
        <description>The average value of the US imports</description>
        <formula>Sum_US__c / Data_Years__c</formula>
        <label>Avg US Imports</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_World__c</fullName>
        <description>The average value of the World imports</description>
        <formula>Sum_World__c / Data_Years__c</formula>
        <label>Avg World Imports</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>NTM_Country__c</referenceTo>
        <relationshipLabel>NTM Country Imports</relationshipLabel>
        <relationshipName>NTM_Country_Imports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Years__c</fullName>
        <description>The number of years of import data available for this product</description>
        <formula>IF(ISBLANK(US_1__c), 0, 1) + IF(ISBLANK(US_2__c), 0, 1) + IF(ISBLANK(US_3__c), 0, 1) + IF(ISBLANK(US_4__c), 0, 1) + IF(ISBLANK(US_5__c), 0, 1)</formula>
        <label>Data Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <defaultValue>&quot;(auto)&quot;</defaultValue>
        <description>External ID field; Autopopulated by Workflow</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field; Autopopulated by Workflow</inlineHelpText>
        <label>Key</label>
        <length>86</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>NTM_Product__c</referenceTo>
        <relationshipLabel>NTM Country Imports</relationshipLabel>
        <relationshipName>NTM_Country_Imports</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum_US__c</fullName>
        <description>Total amount of US imports for all available years</description>
        <formula>US_1__c + US_2__c + US_3__c + US_4__c + US_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum US Imports</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_World__c</fullName>
        <description>Total amount of World imports for all available years</description>
        <formula>World_1__c + World_2__c + World_3__c + World_4__c + World_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum World Imports</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tariff for importing a product into a country</description>
        <label>Tariff</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>US_1__c</fullName>
        <description>Imports from the US for the most recent year</description>
        <inlineHelpText>Country imports from the US, by year, in dollars</inlineHelpText>
        <label>US Imports Now-1</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_2__c</fullName>
        <inlineHelpText>Country imports from the US, by year, in dollars</inlineHelpText>
        <label>US Imports Now-2</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_3__c</fullName>
        <inlineHelpText>Country imports from the US, by year, in dollars</inlineHelpText>
        <label>US Imports Now-3</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>World_1__c</fullName>
        <description>Total imports from the world for the most recent year</description>
        <inlineHelpText>Country imports from the world, by year, in dollars</inlineHelpText>
        <label>World Imports Now-1</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>World_2__c</fullName>
        <inlineHelpText>Country imports from the world, by year, in dollars</inlineHelpText>
        <label>World Imports Now-2</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>World_3__c</fullName>
        <inlineHelpText>Country imports from the world, by year, in dollars</inlineHelpText>
        <label>World Imports Now-3</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_First__c</fullName>
        <description>The earliest year with World import data</description>
        <formula>IF(ISBLANK(World_5__c), IF(ISBLANK(World_4__c), IF(ISBLANK(World_3__c), IF(ISBLANK(World_2__c), IF(ISBLANK(World_1__c), 0, 1), 2), 3), 4), 5)</formula>
        <inlineHelpText>The earliest year with World import data</inlineHelpText>
        <label>Year_First</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Last__c</fullName>
        <description>The latest year with World import data</description>
        <formula>IF(ISBLANK(World_1__c), IF(ISBLANK(World_2__c), IF(ISBLANK(World_3__c), IF(ISBLANK(World_4__c), IF(ISBLANK(World_5__c), 0, 5), 4), 3), 2), 1)</formula>
        <inlineHelpText>The latest year with World import data</inlineHelpText>
        <label>Year_Last</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NTM Country Import</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>NTM Country Import Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTM Country Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Import_Years_Match</fullName>
        <active>true</active>
        <description>US and World import data must be available for the same years</description>
        <errorConditionFormula>(ISBLANK(US_1__c) &lt;&gt; ISBLANK(World_1__c)) || (ISBLANK(US_2__c) &lt;&gt; ISBLANK(World_2__c)) || (ISBLANK(US_3__c) &lt;&gt; ISBLANK(World_3__c)) || (ISBLANK(US_4__c) &lt;&gt; ISBLANK(World_4__c)) || (ISBLANK(US_5__c) &lt;&gt; ISBLANK(World_5__c))</errorConditionFormula>
        <errorMessage>US and World import values must be available for the same years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Positive_Imports</fullName>
        <active>true</active>
        <errorConditionFormula>US_1__c &lt; 0 || US_2__c &lt; 0 || US_3__c &lt; 0 || US_4__c &lt; 0 || US_5__c &lt; 0 || World_1__c &lt; 0 || World_2__c &lt; 0 || World_3__c &lt; 0 || World_4__c &lt; 0 || World_5__c &lt; 0</errorConditionFormula>
        <errorMessage>Import values must not be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tariff</fullName>
        <active>true</active>
        <errorConditionFormula>Tariff__c &gt; 100 || Tariff__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Tariff__c</errorDisplayField>
        <errorMessage>Tariff percent must be between 0% and 100%</errorMessage>
    </validationRules>
</CustomObject>